chore: break words to avoid overflow on x-axis

--- a/src/styles/blog-post.css
+++ b/src/styles/blog-post.css
@@ -6,6 +6,8 @@
 article p {
   @apply my-4;
   @apply leading-relaxed;
+
+  word-break: break-all;
 }
 
 article h1 {
